@@ -1,5 +1,6 @@
 package com.gregstoll.probabilityToFriendlyString;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Objects;
 import java.math.BigInteger;
@@ -7,17 +8,19 @@ import java.math.BigInteger;
 public class FriendlyProbability {
     private byte _numerator;
     private byte _denominator;
+    private String _friendlyDescription;
     private String _friendlyString;
 
-    public FriendlyProbability(byte numerator, byte denominator, String friendlyString)
+    public FriendlyProbability(byte numerator, byte denominator, String friendlyDescription, String friendlyString)
     {
         _numerator = numerator;
         _denominator = denominator;
+        _friendlyDescription = friendlyDescription;
         _friendlyString = friendlyString;
     }
 
-    public FriendlyProbability(byte numerator, byte denominator) {
-        this(numerator, denominator, String.format("%d in %d", numerator, denominator));
+    public FriendlyProbability(byte numerator, byte denominator, String friendlyDescription) {
+        this(numerator, denominator, friendlyDescription, String.format("%d in %d", numerator, denominator));
     }
 
     private static class Fraction implements Comparable<Fraction> {
@@ -33,7 +36,7 @@ public class FriendlyProbability {
 
         @Override
         public int compareTo(Fraction other) {
-            return new Double(_value).compareTo(new Double(other._value));
+            return Double.valueOf(_value).compareTo(Double.valueOf(other._value));
         }
 
         @Override
@@ -53,6 +56,23 @@ public class FriendlyProbability {
     }
 
     private static ArrayList<Fraction> _fractions = null;
+    private static double[] _friendlyDescriptionValues = new double[] {0.005, 0.02, 0.08, 0.15, 0.2, 0.45, 0.55, 0.7, 0.8, 0.85, 0.9, 0.95, 0.995 };
+	private static ArrayList<String>_friendlyDescriptionStrings = new ArrayList<String>(Arrays.asList(
+		"Hard to imagine",
+		"Barely possible",
+		"Still possible",
+		"Some chance",
+		"Could happen",
+		"Perhaps",
+		"Flip a coin",
+		"Likelier than not",
+		"Good chance",
+		"Probably",
+		"Quite likely",
+		"Pretty likely",
+		"Very likely",
+		"Almost certainly"));
+
 
     private static void populateFractionsIfNecessary() {
         if (_fractions == null) {
@@ -90,17 +110,28 @@ public class FriendlyProbability {
         if (prob < 0 || prob > 1) {
             throw new IllegalArgumentException("probability must be between 0 and 1!");
         }
+        int friendlyDescriptionIndex = Arrays.binarySearch(_friendlyDescriptionValues, prob);
+        if (friendlyDescriptionIndex >= 0) {
+            // exact match
+            friendlyDescriptionIndex = friendlyDescriptionIndex + 1;
+        }
+        else {
+            // otherwise, (-(insertion point) – 1)
+            friendlyDescriptionIndex = -friendlyDescriptionIndex - 1;
+        }
+        String friendlyDescription = _friendlyDescriptionStrings.get(friendlyDescriptionIndex);
+
         if (prob == 0) {
-            return new FriendlyProbability((byte)0, (byte)1);
+            return new FriendlyProbability((byte)0, (byte)1, friendlyDescription);
         }
         if (prob == 1) {
-            return new FriendlyProbability((byte)1, (byte)1);
+            return new FriendlyProbability((byte)1, (byte)1, friendlyDescription);
         }
         if (prob > 0.99) {
-            return new FriendlyProbability((byte)99, (byte)100, ">99 in 100");
+            return new FriendlyProbability((byte)99, (byte)100, friendlyDescription, ">99 in 100");
         }
         if (prob < 0.01) {
-            return new FriendlyProbability((byte)1, (byte)100, "<1 in 100");
+            return new FriendlyProbability((byte)1, (byte)100, friendlyDescription, "<1 in 100");
         }
         populateFractionsIfNecessary();
         int right = binarySearch(prob);
@@ -112,7 +143,7 @@ public class FriendlyProbability {
         else {
             fraction = _fractions.get(right);
         }
-        return new FriendlyProbability(fraction.getNumerator(), fraction.getDenominator());
+        return new FriendlyProbability(fraction.getNumerator(), fraction.getDenominator(), friendlyDescription);
     }
 
     @Override
@@ -127,17 +158,17 @@ public class FriendlyProbability {
             return false;
         }
         FriendlyProbability otherProb = (FriendlyProbability)o;
-        return _numerator == otherProb._numerator && _denominator == otherProb._denominator && _friendlyString.equals(otherProb._friendlyString);
+        return _numerator == otherProb._numerator && _denominator == otherProb._denominator && _friendlyDescription.equals(otherProb._friendlyDescription) && _friendlyString.equals(otherProb._friendlyString);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(_numerator, _denominator, _friendlyString);
+        return Objects.hash(_numerator, _denominator, _friendlyDescription, _friendlyString);
     }
 
     @Override
     public String toString() {
-        return String.format("%d/%d (text: \"%s\")", _numerator, _denominator, _friendlyString);
+        return String.format("%d/%d (text: \"%s\", description: \"%s\")", _numerator, _denominator, _friendlyString, _friendlyDescription);
     }
 
     public byte getNumerator() {
@@ -150,5 +181,9 @@ public class FriendlyProbability {
 
     public String getFriendlyString() {
         return _friendlyString;
+    }
+
+    public String getFriendlyDescription() {
+        return _friendlyDescription;
     }
 }
